--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -3,8 +3,10 @@ layout: archive
 ---
 
 {{ content }}
+ 
+{% if site.posts.size > 0 %}
 
-<h3 class="archive__subtitle">{{ site.data.ui-text[site.locale].recent_posts | default: "Recent Posts" }}</h3>
+<h2 class="archive__title">{{ site.data.ui-text[site.locale].recent_posts | default: "Recent Posts" }}</h2>
 
 {% if paginator %}
   {% assign posts = paginator.posts %}
@@ -12,9 +14,17 @@ layout: archive
   {% assign posts = site.posts %}
 {% endif %}
 
-{% assign entries_layout = page.entries_layout | default: 'list' %}
+<!-- {% assign entries_layout = page.entries_layout | default: 'list' %}
 <div class="entries-{{ entries_layout }}">
   {% include documents-collection.html entries=posts type=entries_layout %}
+</div> -->
+
+{% assign entries_layout = page.entries_layout | default: 'list' %}
+<div class="entries-{{ entries_layout }}">
+  {% for post in posts limit: 3 %}
+    {% include archive-single.html type=entries_layout %}
+  {% endfor %}
 </div>
 
 {% include paginator.html %}
+{% endif %}
