--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,5 +32,9 @@
     </div>
 
     {% include scripts.html %}
+
+    <script type="text/javascript" id="MathJax-script" async
+    src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js">
+    </script>
   </body>
 </html>
