--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -4,9 +4,8 @@ layout: archive
 
 {{ content }}
  
-{% if site.posts.size > 0 %}
 
-<h2 class="archive__title">{{ site.data.ui-text[site.locale].recent_posts | default: "Recent Posts" }}</h2>
+<h3 class="archive__subtitle">{{ site.data.ui-text[site.locale].recent_posts | default: "Recent Posts" }}</h3>
 
 {% if paginator %}
   {% assign posts = paginator.posts %}
@@ -27,4 +26,3 @@ layout: archive
 </div>
 
 {% include paginator.html %}
-{% endif %}
