--- a/_sass/minimal-mistakes/_page.scss
+++ b/_sass/minimal-mistakes/_page.scss
@@ -559,3 +559,16 @@ body {
     }
   }
 }
+
+.medium {
+  .page, .page__related {
+    @include breakpoint($large) {
+      padding-inline-end: 150px;
+    }
+
+    @include breakpoint($x-large) {
+      padding-inline-end: 150px;
+    }
+  }
+}
+
